--- a/cms/Views/DropBox/Index.cshtml
+++ b/cms/Views/DropBox/Index.cshtml
@@ -1,9 +1,89 @@
 ﻿
+<script>
+
+    function OnApplicationHeaderGridFocusedRowChanged(s, e) {
+        s.GetRowValues(s.GetFocusedRowIndex(), 'ObjId', OnGetRowValues);
+    }
+    function OnGetRowValues(values) {
+        ApplicationGridViewPartial_ObjiId = values;
+        //DropBoxPanel.PerformCallback();
+
+    }
+
+    function InitialSetFocus(s, e) {
+        if (s.GetFocusedRowIndex() < 0)
+            s.SetFocusedRowIndex(0);
+    }
+
+
+    function OnBeginCallback(s, e) {
+
+        e.customArgs["headerObjId"] = ApplicationGridViewPartial.GetRowKey(ApplicationGridViewPartial.GetFocusedRowIndex());
+
+        var header = ApplicationGridViewPartial.GetRowKey(ApplicationGridViewPartial.GetFocusedRowIndex());
+      //  alert(header);
+     //   e.customArgs["HeaderId"] = ApplicationGridViewPartial_ObjiId; gvContainerBookingHeader.GetRowKey(gvContainerBookingHeader.GetFocusedRowIndex());
+    }
+
+
+    function HighlightEllipsis() {
+    	$('.dxgv.dx-ellipsis').each(function (i, elem) {
+    		var color = elem.offsetWidth < elem.scrollWidth ? '#FFF2C0' : 'white';
+    		elem.style.transition = 'background 1s';
+    		elem.style['background-color'] = color;
+    	});
+    }
+
+    //for exports on grids
+    function OnToolbarItemClick(s, e) {
+    }
+    function IsExportToolbarCommand(command) {
+    	return command == "Pdf" || command == "Xlsx" || command == "Xls";
+    }
+</script>
 
 @using (Html.BeginForm())
 {
-    @Html.Action("FileManagerPartial")
+
+@Html.DevExpress().FormLayout(settings =>
+{
+	settings.Name = "DropBoxFeaturesFormLayout";
+	settings.AlignItemCaptionsInAllGroups = true;
+	settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+	var groupMain = settings.Items.AddGroupItem(groupSettings =>
+	{
+		groupSettings.Caption = string.Format("DropBox Features");
+		groupSettings.ShowCaption = DefaultBoolean.True;
+		groupSettings.GroupBoxDecoration = GroupBoxDecoration.None;
+		groupSettings.SettingsItemCaptions.HorizontalAlign = FormLayoutHorizontalAlign.Left;
+		groupSettings.ColCount = 1;
+	});
+	groupMain.Items.Add(itemSettings =>
+	{
+		itemSettings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+		itemSettings.ShowCaption = DefaultBoolean.False;
+		itemSettings.ColSpan = 1;
+		itemSettings.SetNestedContent(() =>
+		{
+			@Html.RenderAction("ApplicationsGridViewPartial");
+		});
+	});
+	groupMain.Items.Add(itemSettings =>
+	{
+		itemSettings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+		itemSettings.ShowCaption = DefaultBoolean.False;
+		itemSettings.ColSpan = 1;
+		itemSettings.SetNestedContent(() =>
+		{
+			//return form
+			@Html.RenderAction("FileManagerPartial");
+		});
+	});
+
+}).GetHtml()
+
 }
+
 
 
 
