--- a/cms/Views/DropBox/GridViewPartialView.cshtml
+++ b/cms/Views/DropBox/GridViewPartialView.cshtml
@@ -14,17 +14,17 @@
 		Html.PalBrokerHtml().GridView.GridDefaultBehavior(settings, "ApplicationGridViewPartial");
 		settings.Settings.ShowStatusBar = GridViewStatusBarMode.Hidden;
 		settings.SettingsPager.PageSize = 15;
-		settings.Settings.HorizontalScrollBarMode = ScrollBarMode.Auto;
+		//settings.Settings.HorizontalScrollBarMode = ScrollBarMode.Auto;
 
-		settings.CommandColumn.Visible = true;
-		settings.CommandColumn.ShowSelectCheckbox = true;
+		//settings.CommandColumn.Visible = true;
+		//settings.CommandColumn.ShowSelectCheckbox = true;
 		//   settings.CommandColumn.Width = 40;
 		settings.Settings.ShowStatusBar = GridViewStatusBarMode.Hidden;
 
 		//  settings.Settings.HorizontalScrollBarMode = ScrollBarMode.Visible;
 
 		settings.Settings.VerticalScrollBarMode = ScrollBarMode.Auto;
-		settings.Settings.VerticalScrollableHeight = 220;
+		settings.Settings.VerticalScrollableHeight = 420;
 
 		settings.SettingsPager.PageSizeItemSettings.Visible = true;
 		settings.SettingsPager.AlwaysShowPager = true;
